Fix mobile header alignment: center picture and name on mobile

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -469,6 +469,7 @@ screen and (max-width: 720px) {
   header {
     padding: 10px 20px 0;
     margin-right: 0;
+    text-align: center;
   }
 
   section {
